<resources>
    <string name="app_name">MangaReader</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user_bookshelf">MangaReader</string>
    <string name="bookshelf_txt">Bookshelf</string>
    <string name="search_txt">Search</string>
	<string name="downloading_txt">Downloading</string>
 	<string name="share_txt">Share</string>
 	<string name="thumbnail_description">Thumbnail Description</string>
 	<string name="isBookshelf_description">Is it in bookshelf?</string>
 	<string name="isRead_description">Has it been read?</string>
</resources>