<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Add icons to items when possible:
    android:icon="@drawable/<iconName" -->
    
	<item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item android:id="@+id/bookshelf"
          android:title="@string/bookshelf_txt"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/search"
          android:title="@string/search_txt"
          android:showAsAction="ifRoom|withText" />    

    <item android:id="@+id/downloading"
          android:title="@string/downloading_txt"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/share"
          android:title="@string/share_txt"
          android:showAsAction="ifRoom|withText" />  
        
</menu>
