<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 		          
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >

	<ImageView
	    android:id="@+id/thumbnail"
  	  	android:contentDescription="@string/thumbnail_description"
      	android:layout_width="100dp"        	
      	android:layout_height="fill_parent"
      	android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"      	
        android:layout_marginRight="6dip"
        android:adjustViewBounds="true"	/>  

    <TextView
    	android:id="@+id/name"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/thumbnail"
    	android:paddingRight="10dp"
    	android:singleLine="true"
    	android:maxWidth="175dp"
    	android:textStyle="italic" />
        
    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_below="@id/name"
        android:singleLine="true"
    	android:maxWidth="175dp" />
        
    
    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnail"        
        android:layout_below="@id/author"
        android:textStyle="bold"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
	    <ImageView
	      android:id="@+id/isBookshelf" 
	      android:contentDescription="@string/isBookshelf_description"
	      android:layout_width="25dp"  
	      android:layout_height="wrap_content"
	      android:layout_gravity="right"
	      android:paddingRight="5dp" />
	    
	    <ImageView
	      android:id="@+id/isRead" 
	      android:contentDescription="@string/isRead_description"
	      android:layout_width="25dp"  
	      android:layout_height="wrap_content"
	      android:layout_gravity="right"
	      android:paddingRight="5dp" /> 	
      
    </LinearLayout>
     
 </RelativeLayout>